--- a/src/client/login.html
+++ b/src/client/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <section>
-    <form action="/auth/login" method="post" autocomplete>
+    <form action="/login" method="post" autocomplete>
       <label for="mobile">手机号:</label>
       <input type="text" name="mobile">
       <input type="submit" value="登录">
